# libpatch

./: .gitignore  CMakeLists.txt  README.md  patch.c  patch.h  vcpkg.json
.github/workflows/: codeql.yml  ctest.yml
bps/: bps.c  bps.h
examples/patcher/: CMakeLists.txt  main.c
ips/: ips.c
src/: CMakeLists.txt  patch.c  patch.h
src/bps/: CMakeLists.txt  bps.c  bps.h
src/common/: common.c  common.h
src/ips/: CMakeLists.txt  ips.c  ips.h
src/ups/: ups.c  ups.h
tests/: CMakeLists.txt  test_framework.c  test_framework.h
tests/bps/: CMakeLists.txt  test_bps.c
tests/ips/: CMakeLists.txt  test_ips.c
tests/ups/: CMakeLists.txt  test_ups.c
ups/: CMakeLists.txt  ups.c
